  - Add system hook messages for project rename and transfer (Steve Norman)
  - Fix version check image in Safari
  - Show 'All' tab by default in the builds page
  - Fix API project lookups when querying with a namespace with dots (Stan Hu)
  - Update version check images to use SVG
  - Validate README format before displaying
  - Enable Microsoft Azure OAuth2 support (Janis Meybohm)

v 8.3.3 (unreleased)
  - Get "Merge when build succeeds" to work when commits were pushed to MR target branch while builds were running
  - Fix project transfer e-mail sending incorrect paths in e-mail notification (Stan Hu)
  - Enable "Add key" button when user fills in a proper key (Stan Hu)

v 8.3.2
  - Change single user API endpoint to return more detailed data (Michael Potthoff)

v 8.3.2 (unreleased)
  - Disable --follow in `git log` to avoid loading duplicate commit data in infinite scroll (Stan Hu)
  - Add support for Google reCAPTCHA in user registration

v 8.3.1
  - Fix Error 500 when global milestones have slashes (Stan Hu)
  - Fix Error 500 when doing a search in dashboard before visiting any project (Stan Hu)
  - Fix LDAP identity and user retrieval when special characters are used
  - Move Sidekiq-cron configuration to gitlab.yml
  - Enable forcing Two-Factor authentication sitewide, with optional grace period
  - Import GitHub Pull Requests into GitLab

v 8.3.0
  - Bump rack-attack to 4.3.1 for security fix (Stan Hu)
  - API support for starred projects for authorized user (Zeger-Jan van de Weg)
  - Add open_issues_count to project API (Stan Hu)
  - Expand character set of usernames created by Omniauth (Corey Hinshaw)
  - Add button to automatically merge a merge request when the build succeeds (Zeger-Jan van de Weg)
  - Provide better diagnostic message upon project creation errors (Stan Hu)
  - Bump devise to 3.5.3 to fix reset token expiring after account creation (Stan Hu)
  - Remove api credentials from link to build_page